@@ -12,7 +12,7 @@ patched by Nadav Har'El. The Torah reading sequence
 is from tables by Zvi Har'El.
 .SH "SYNOPSIS"
 .B hdate
-[\-sShdr]
+[\-sShdri]
 .PP
 [\-L longitude \-l latitude]
 [\-z timezone]
@@ -44,6 +44,9 @@ Months are numbered with Tishrey being 1 and Elul 12; Adar I and Adar II are mon
 .PP
 .I \-d 
 : Use diaspora reading and holidays.
+.PP
+.I \-i 
+:  Use iCal formated output.
 .PP
 .I \-l 
 xx : Set the latitude for solar calculations to
